# demcru

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  package.json  tailwind.config.js
config/: blog.yml
manifests/: deploy.yaml  ingress.yaml  letsencypt.yaml  service.yaml
migrations/: 20230726154704_create_contact_table.sql  20231010025326_likes_table.sql  20231010200947_alter_table_likes.sql  20231012003045_alter_table_likes2.sql  20231026165023_likes_table.sql
scripts/: contacts.sql  init-db.sh
src/: configuration.rs  contacts.rs  lib.rs  main.rs  startup.rs  utils.rs
src/models/: contacts.rs  mod.rs
src/routes/: blog.rs  chat.rs  home.rs  mod.rs
static/root/: index.html
static/styles/: layout.css  output.css
templates/: blog.hbs  chat.hbs  contact.hbs  content.hbs  head.hbs  index.hbs  index.html  nav.html
tests/: check.rs
tests/api/: chat.rs  check.rs  helpers.rs  main.rs
