[package]
name = "demcru"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
config = "0.13.3"
dotenv = "0.15.0"
reqwest = "0.11.18"
serde = "1.0.175"
sqlx = { version = "0.6", default-features = false, features = ["offline", "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mini_markdown = "0.3"
serde_yaml = "0.9"
serde_json = "1.0"
handlebars = { version = "4.2.1", features = ["dir_source"] }
proc-macro2 = "1.0.66"
chrono = { version = "0.4.28", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
actix-session = { version = "0.8.0", features = ["cookie-session"] }
anyhow = "1.0.75"
